--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,4 +1,87 @@
 //====================================================================================================
+.header {
+
+	// .header__top
+
+	&__top {
+		
+		background-color: $darkBackground;
+	}
+
+	// .header__container
+
+	&__container {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		min-height: rem(70);
+	}
+}
+.top-header {
+
+	// .top-header__menu
+
+	&__menu {
+	}
+
+	// .top-header__cabinet
+
+	&__cabinet {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		gap: rem(14);
+
+		font-weight: 600;
+		font-size: rem(18);
+		line-height: math.div(22 ,18 );
+		color: $whiteColor;
+	}
+
+	// .top-header__icon
+
+	&__icon {
+	}
+}
+
+.menu {
+
+	// .menu__icon
+
+	&__icon {
+	}
+
+	// .menu__body
+
+	&__body {
+	}
+
+	// .menu__list
+
+	&__list {
+		max-width: rem(543);
+		display: flex;
+		justify-content: space-between;
+		@include adaptiveValue("gap",60 ,10 );
+	}
+
+	// .menu__item
+
+	&__item {
+		font-size: rem(16);
+		line-height: math.div(20 ,16 );
+		color: $whiteColor;
+	}
+
+	// .menu__link
+
+	&__link {
+	}
+}
+
+._icon-men {
+	font-size: rem(27);
+}
 
 //====================================================================================================
 
