--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,24 +5,30 @@
 
 // Підключення шрифтів ===========================================================================================================================================================================================================================================================================
 //&display=swap - додати при підключенні через плагін
+@import url(https://fonts.googleapis.com/css?family=Montserrat:500,600,700&display=swap);
 
 // Підключити, якщо є локальні файли шрифтів
-//@import "fonts/fonts";
+@import "fonts/fonts";
 
 // Підключення іконкових шрифтів ==============================================================================================================================================================================================================================================================================
 // Підключити, якщо є файл іконкового шрифту
-//@import "fonts/icons";
+@import "fonts/icons";
 
 // ============================================================================================================================================================================================================================================================================================================================================================================================
 // Налаштування шаблону ============================================================================================================================================================================================================================================================================================================================================================================================
 // ============================================================================================================================================================================================================================================================================================================================================================================================
 
 // За замовчуванням шрифт ==============================================================================================================================================================================================================================================================================
-$fontFamily: "";
-$fontSize: rem(14); // де 14(px) - розмір шрифту за замовчуванням з макету
+$fontFamily: "Montserrat";
+$fontSize: rem(18); // де 14(px) - розмір шрифту за замовчуванням з макету
 
 // Основні кольори
 $mainColor: #000; // Колір шрифту за замовчуванням
+$yellowColor:#E8AA31;
+$greyColor:#ABABAB;
+$darkBackground:#141414;
+$lightBackground: #ECF1F2;
+$whiteColor: #fff;
 
 // Налаштування адаптивної сітки ===============================================================================================================================================================================================================================================================================================
 
@@ -31,7 +37,7 @@ $minWidth: 320;
 // Ширина полотна (макету)
 $maxWidth: 1920;
 // Ширина обмежуючого контейнера (0 = немає обмеження)
-$maxWidthContainer: 1170;
+$maxWidthContainer: 1590;
 // Загальний відступ у контейнера
 // (30 = по 15px ліворуч і праворуч, 0 = немає відступу)
 $containerPadding: 30;
@@ -60,6 +66,7 @@ $responsiveType: 1;
 
 body {
 	// Скролл заблоковано
+	font-weight: 500;
 	.lock & {
 		overflow: hidden;
 		touch-action: none;
