--- a/src/scss/fonts/icons.scss
+++ b/src/scss/fonts/icons.scss
@@ -14,3 +14,36 @@
 		display: block;
 	}
 }
+
+._icon-scales:before {
+	content: "\e900";
+  }
+  ._icon-men:before {
+	content: "\e901";
+  }
+  ._icon-location:before {
+	content: "\e902";
+  }
+  ._icon-heart:before {
+	content: "\e903";
+  }
+  ._icon-footer-phone:before {
+	content: "\e904";
+  }
+  ._icon-footer-mail:before {
+	content: "\e905";
+  }
+  ._icon-footer-clock:before {
+	content: "\e906";
+  }
+  ._icon-cart:before {
+	content: "\e907";
+  }
+  ._icon-arrow:before {
+	content: "\e908";
+  }
+
+  ._icon-dollar:before {
+	content: "\e909";
+  }
+  
